--- a/config/ai_providers.yaml
+++ b/config/ai_providers.yaml
@@ -2,7 +2,7 @@
 
 openai:
   api_key_env_var: "OPENAI_API_KEY"
-  default_model: "gpt-3.5-turbo"
+  default_model: "gpt-4o"
   endpoint: "https://api.openai.com/v1/chat/completions"
 
 gemini:
